--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="container">
 
   <form>
     <mat-form-field>
@@ -25,4 +25,6 @@
     </tr>
   </table>
 
+
+  <app-loader></app-loader>
 </section>
