communication between components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,9 @@
 <section class="container">
 
-  <form>
-    <mat-form-field>
-      <input type="number" matInput [formControl]="numberNFormControl" placeholder="Ingresa el valor n">
-    </mat-form-field>
-  </form>
+  <app-form (valueN)="emitN($event)"
+            (valueResponse)="emitResponse($event)"></app-form>
 
-  <table class="math">
-    <tr>
-        <td rowspan="3">serie<sub>( {{ numberNFormControl.value == null ? "n" : numberNFormControl.value }} )</sub> =</td>
-        <td>
-          3fibonacci<sub>({{ numberNFormControl.value == null ? "n" : numberNFormControl.value }})</sub> 
-          - 
-          3triangular<sub>({{ numberNFormControl.value == null ? "n" : numberNFormControl.value }} - 1)</sub></td>
-        <td rowspan="3"> = X </td>
-    </tr>
-
-    <tr>
-        <td class="divider">
-          ({{ numberNFormControl.value == null ? "n" : numberNFormControl.value }} - 10)
-          primo<sub>({{ numberNFormControl.value == null ? "n" : numberNFormControl.value }} + 2)</sub>
-        </td>
-    </tr>
-  </table>
+  <app-equation [numberN]="numN" [result]="finalResult"></app-equation>
 
   @if(flagLoader){ 
     <app-loader></app-loader>
